- add webcli build - add login feature

--- a/webcli/src/index.html
+++ b/webcli/src/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Webcli</title>
+  <title>Wordwizard</title>
   <base href="/">
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 <app-root></app-root>
