--- a/webcli/src/index.html
+++ b/webcli/src/index.html
@@ -7,7 +7,10 @@
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link
+    href="//fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+    rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
